--- a/Stick-Hero/Base.lproj/LaunchScreen.storyboard
+++ b/Stick-Hero/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_background.png" translatesAutoresizingMaskIntoConstraints="NO" id="zfv-CR-peU">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_background1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="zfv-CR-peU">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                         </subviews>
@@ -36,6 +36,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch_background.png" width="1536" height="2048"/>
+        <image name="launch_background1.jpg" width="1536" height="2048"/>
     </resources>
 </document>
