--- a/Stick-Hero/Base.lproj/Main.storyboard
+++ b/Stick-Hero/Base.lproj/Main.storyboard
@@ -21,6 +21,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="297" y="363"/>
         </scene>
     </scenes>
 </document>
